# CGSynch

./: .gitignore  CMakeLists.txt  Makefile  README.md  hackenbush string examples  links  main.cpp
AbstractGame/: CombinatorialGame.cpp  CombinatorialGame.h  CombinatorialGameDatabase.cpp  CombinatorialGameDatabase.h  CombinatorialGameUtil.h  DyadicRational.cpp  DyadicRational.h  GameUtil.cpp  GameUtil.h  SynchronizedGameDatabase.cpp  SynchronizedGameDatabase.h  SynchronousGame.h  util.h
AbstractGame/CombinatorialGame/: CombinatorialGame.cpp  CombinatorialGame.h  CombinatorialGameDatabase.cpp  CombinatorialGameDatabase.h  CombinatorialGameUtil.h  DyadicRational.cpp  DyadicRational.h
AbstractGame/SynchronousGame/: GurobiSolver.cpp  GurobiSolver.h  Rational.cpp  Rational.h  SynchronizedGameDatabase.cpp  SynchronizedGameDatabase.h  SynchronizedGameUtil.h  SynchronousGame.cpp  SynchronousGame.h
CombinatorialGames/: AbstractGame.h  Cherries.cpp  Cherries.h  CherriesGame.cpp  CherriesGame.h  CherriesUtil.h  GameDatabase.h  Push.cpp  Push.h  PushShoveUtil.cpp  PushShoveUtil.h  RulesetDatabase.h  RulesetMath.h  RulesetUtil.cpp  RulesetUtil.h  Shove.h  StackCherries.cpp  StackCherries.h
CombinatorialGames/Cherries/: Cherries.cpp  Cherries.h  CherriesUtil.cpp  CherriesUtil.h  StackCherries.cpp  StackCherries.h
CombinatorialGames/Hackenbush/: Graph.cpp  Graph.h  Hackenbush.cpp  Hackenbush.h  HackenbushUtil.h  NormalGraph.cpp  NormalGraph.h  Notes.txt
CombinatorialGames/Math/: RulesetMath.cpp  RulesetMath.h  RulesetMathUtil.cpp  RulesetMathUtil.h
CombinatorialGames/Push-Shove/: Push.cpp  Push.h  PushShoveUtil.cpp  PushShoveUtil.h  Shove.cpp  Shove.h
CombinatorialRuleset/: AbstractRuleset.h  Ruleset.h  RulesetCherries.cpp  RulesetCherries.h  RulesetDatabase.cpp  RulesetDatabase.h  RulesetMath.cpp  RulesetMath.h  RulesetUtil.h
Game/: CombinatorialGame.cpp  CombinatorialGame.h  CombinatorialGameDatabase.cpp  CombinatorialGameDatabase.h  util.h
Rulesets/: AbstractGame.h  AbstractSynchedGame.h  GameDatabase.h  RulesetUtil.cpp  RulesetUtil.h
Rulesets/Cherries/: Cherries.cpp  Cherries.h  CherriesUtil.cpp  CherriesUtil.h  StackCherries.cpp  StackCherries.h
Rulesets/Hackenbush/: Hackenbush.cpp  Hackenbush.h  HackenbushUtil.h  NormalGraph.cpp  NormalGraph.h
Rulesets/Math/: RulesetMath.cpp  RulesetMath.h  RulesetMathUtil.cpp  RulesetMathUtil.h
Rulesets/Push-Shove/: Push.cpp  Push.h  PushShoveUtil.cpp  PushShoveUtil.h  Shove.cpp  Shove.h
UI/: CombinatorialGameCommandLine.cpp  CombinatorialGameCommandLine.h
UI/AlternatingUI/: SpiritParser.cpp  SpiritParser.h  TreeNodes.cpp  TreeNodes.h
UI/Spirit/: SpiritParser.cpp  SpiritParser.h  TreeNodes.cpp  TreeNodes.h
UI/SynchedUI/: SpiritParser.cpp  SpiritParser.h
UI/TreeNodes/: AbstractUITreeNode.cpp  AbstractUITreeNode.h  TypeCheckFunctions.h  UITreeNodeFunction.cpp  UITreeNodeFunction.h  UITreeNodeFunctions.h  UITreeNodeInEquality.cpp  UITreeNodeInEquality.h
Util/: Matrix.h
